Issue #1516: increase test coverage to 80%