@@ -38,7 +38,7 @@ class ReferenceListTestCase {
     @Test
     void constructor_withDelegate_wrapsGivenList() {
         List<Reference> delegate = new ArrayList<>();
-        delegate.add(new Reference("http://example.com/a"));
+        delegate.add(new Reference("https://example.com/a"));
         ReferenceList list = new ReferenceList(delegate);
         assertEquals(1, list.size());
     }
@@ -46,15 +46,15 @@ class ReferenceListTestCase {
     @Test
     void addUri_createsReferenceAndAppendsIt() {
         ReferenceList list = new ReferenceList();
-        assertTrue(list.add("http://example.com/a"));
+        assertTrue(list.add("https://example.com/a"));
         assertEquals(1, list.size());
-        assertEquals("http://example.com/a", list.get(0).toString());
+        assertEquals("https://example.com/a", list.getFirst().toString());
     }
 
     @Test
     void setAndGetIdentifier_withReference() {
         ReferenceList list = new ReferenceList();
-        Reference identifier = new Reference("http://example.com/");
+        Reference identifier = new Reference("https://example.com/");
         list.setIdentifier(identifier);
         assertEquals(identifier, list.getIdentifier());
     }
@@ -62,28 +62,30 @@ class ReferenceListTestCase {
     @Test
     void setIdentifier_withStringUri_createsReference() {
         ReferenceList list = new ReferenceList();
-        list.setIdentifier("http://example.com/");
-        assertEquals("http://example.com/", list.getIdentifier().toString());
+        list.setIdentifier("https://example.com/");
+        assertEquals("https://example.com/", list.getIdentifier().toString());
     }
 
     @Test
     void constructor_fromUriListRepresentation_parsesLines() throws IOException {
         String content =
-                "# http://example.com/\r\n"
-                        + "http://example.com/a\r\n"
-                        + "http://example.com/b\r\n";
+                """
+                # https://example.com/
+                https://example.com/a
+                https://example.com/b
+                """;
         Representation representation = new StringRepresentation(content, MediaType.TEXT_URI_LIST);
         ReferenceList list = new ReferenceList(representation);
 
-        assertEquals("http://example.com/", list.getIdentifier().toString());
+        assertEquals("https://example.com/", list.getIdentifier().toString());
         assertEquals(2, list.size());
-        assertEquals("http://example.com/a", list.get(0).toString());
-        assertEquals("http://example.com/b", list.get(1).toString());
+        assertEquals("https://example.com/a", list.getFirst().toString());
+        assertEquals("https://example.com/b", list.get(1).toString());
     }
 
     @Test
     void constructor_fromUriListRepresentation_withoutIdentifierComment() throws IOException {
-        String content = "http://example.com/a\r\n";
+        String content = "https://example.com/a\r\n";
         Representation representation = new StringRepresentation(content, MediaType.TEXT_URI_LIST);
         ReferenceList list = new ReferenceList(representation);
 
@@ -94,33 +96,33 @@ class ReferenceListTestCase {
     @Test
     void getTextRepresentation_containsIdentifierAndReferences() throws IOException {
         ReferenceList list = new ReferenceList();
-        list.setIdentifier("http://example.com/");
-        list.add("http://example.com/a");
+        list.setIdentifier("https://example.com/");
+        list.add("https://example.com/a");
 
         Representation representation = list.getTextRepresentation();
         assertEquals(MediaType.TEXT_URI_LIST, representation.getMediaType());
         String text = representation.getText();
-        assertTrue(text.contains("# http://example.com/"));
-        assertTrue(text.contains("http://example.com/a"));
+        assertTrue(text.contains("# https://example.com/"));
+        assertTrue(text.contains("https://example.com/a"));
     }
 
     @Test
     void getWebRepresentation_producesHtmlListing() throws IOException {
         ReferenceList list = new ReferenceList();
-        list.setIdentifier("http://example.com/dir/");
-        list.add("http://example.com/dir/a");
+        list.setIdentifier("https://example.com/dir/");
+        list.add("https://example.com/dir/a");
 
         Representation representation = list.getWebRepresentation();
         assertEquals(MediaType.TEXT_HTML, representation.getMediaType());
         String text = representation.getText();
         assertTrue(text.contains("<html>"));
-        assertTrue(text.contains("http://example.com/dir/a"));
+        assertTrue(text.contains("https://example.com/dir/a"));
     }
 
     @Test
     void getWebRepresentation_withoutIdentifier_usesGenericTitle() throws IOException {
         ReferenceList list = new ReferenceList();
-        list.add("http://example.com/a");
+        list.add("https://example.com/a");
 
         Representation representation = list.getWebRepresentation();
         String text = representation.getText();
@@ -130,13 +132,13 @@ class ReferenceListTestCase {
     @Test
     void subList_returnsReferenceListInstance() {
         ReferenceList list = new ReferenceList();
-        list.add("http://example.com/a");
-        list.add("http://example.com/b");
-        list.add("http://example.com/c");
+        list.add("https://example.com/a");
+        list.add("https://example.com/b");
+        list.add("https://example.com/c");
 
         ReferenceList sub = list.subList(1, 3);
         assertEquals(2, sub.size());
-        assertEquals("http://example.com/b", sub.get(0).toString());
-        assertEquals("http://example.com/c", sub.get(1).toString());
+        assertEquals("https://example.com/b", sub.getFirst().toString());
+        assertEquals("https://example.com/c", sub.get(1).toString());
     }
 }
