@@ -27,32 +27,32 @@ class ProductReaderTestCase {
     void read_tokenOnly_parsesName() {
         List<Product> products = ProductReader.read("Restlet");
         assertEquals(1, products.size());
-        assertEquals("Restlet", products.get(0).getName());
-        assertNull(products.get(0).getVersion());
+        assertEquals("Restlet", products.getFirst().getName());
+        assertNull(products.getFirst().getVersion());
     }
 
     @Test
     void read_tokenAndVersion_parsesBoth() {
         List<Product> products = ProductReader.read("Restlet/2.7");
         assertEquals(1, products.size());
-        assertEquals("Restlet", products.get(0).getName());
-        assertEquals("2.7", products.get(0).getVersion());
+        assertEquals("Restlet", products.getFirst().getName());
+        assertEquals("2.7", products.getFirst().getVersion());
     }
 
     @Test
     void read_tokenVersionAndComment_parsesAll() {
         List<Product> products = ProductReader.read("Restlet/2.7 (Java)");
         assertEquals(1, products.size());
-        assertEquals("Restlet", products.get(0).getName());
-        assertEquals("2.7", products.get(0).getVersion());
-        assertEquals("Java", products.get(0).getComment());
+        assertEquals("Restlet", products.getFirst().getName());
+        assertEquals("2.7", products.getFirst().getVersion());
+        assertEquals("Java", products.getFirst().getComment());
     }
 
     @Test
     void read_multipleProducts_parsesEachOne() {
         List<Product> products = ProductReader.read("Restlet/2.7 (Java) Mozilla/5.0");
         assertEquals(2, products.size());
-        assertEquals("Restlet", products.get(0).getName());
+        assertEquals("Restlet", products.getFirst().getName());
         assertEquals("Mozilla", products.get(1).getName());
         assertEquals("5.0", products.get(1).getVersion());
     }
