@@ -12,6 +12,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.restlet.data.Product;
 
@@ -19,22 +20,20 @@ class ProductWriterTestCase {
 
     @Test
     void write_nameOnly_writesNameOnly() {
-        assertEquals(
-                "Restlet", ProductWriter.write(Arrays.asList(new Product("Restlet", null, null))));
+        assertEquals("Restlet", ProductWriter.write(List.of(new Product("Restlet", null, null))));
     }
 
     @Test
     void write_nameAndVersion_joinsWithSlash() {
         assertEquals(
-                "Restlet/2.7",
-                ProductWriter.write(Arrays.asList(new Product("Restlet", "2.7", null))));
+                "Restlet/2.7", ProductWriter.write(List.of(new Product("Restlet", "2.7", null))));
     }
 
     @Test
     void write_nameVersionAndComment_appendsParenthesizedComment() {
         assertEquals(
                 "Restlet/2.7 (Java)",
-                ProductWriter.write(Arrays.asList(new Product("Restlet", "2.7", "Java"))));
+                ProductWriter.write(List.of(new Product("Restlet", "2.7", "Java"))));
     }
 
     @Test
@@ -49,11 +48,9 @@ class ProductWriterTestCase {
 
     @Test
     void write_nullOrEmptyName_throwsIllegalArgumentException() {
-        assertThrows(
-                IllegalArgumentException.class,
-                () -> ProductWriter.write(Arrays.asList(new Product(null, "2.7", null))));
-        assertThrows(
-                IllegalArgumentException.class,
-                () -> ProductWriter.write(Arrays.asList(new Product("", "2.7", null))));
+        List<Product> list = List.of(new Product(null, "2.7", null));
+        assertThrows(IllegalArgumentException.class, () -> ProductWriter.write(list));
+        List<Product> list1 = List.of(new Product("", "2.7", null));
+        assertThrows(IllegalArgumentException.class, () -> ProductWriter.write(list1));
     }
 }
